# velma_core_cs_ve_body_interface

./: CMakeLists.txt  package.xml
config/: velma_lli_test_2_lo.ops  velma_lli_test_3_lo.ops  velma_lli_test_hi.ops  velma_lli_test_lo.ops  velma_lli_test_sim_hi.ops  velma_lli_test_sim_lo.ops
include/velma_core_cs_ve_body_interface/: command_ports.h  port_data.h  status_ports.h  velma_lli_command_ports.h  velma_lli_port_data.h  velma_lli_real_effector_commands.h  velma_lli_real_effector_port_data.h  velma_lli_real_effector_status.h  velma_lli_status_ports.h
include/velma_low_level_interface/: velma_lli_command_ports.h  velma_lli_port_data.h  velma_lli_port_data_spec.h  velma_lli_ports.h  velma_lli_real_effector_commands.h  velma_lli_real_effector_port_data.h  velma_lli_real_effector_status.h  velma_lli_status_ports.h
launch/: velma_lli_test.launch  velma_lli_test_2_hi.launch  velma_lli_test_2_lo.launch  velma_lli_test_3_lo.launch  velma_lli_test_sim_hi.launch  velma_lli_test_sim_lo.launch
src/: command_ports.cpp  interface_rx.h  interface_tx.h  shm_comm.c  shm_comm.h  shm_comm_api.c  shm_comm_api.h  shm_comm_locking.c  shm_comm_locking.h  status_ports.cpp  velma_core_cs_ve_body_interface.cpp  velma_hi_state.cpp  velma_hi_state.h  velma_lli_command_ports.cpp  velma_lli_command_ports.h  velma_lli_hi_rx.cpp  velma_lli_hi_rx.h  velma_lli_hi_test.cpp  velma_lli_hi_test.h  velma_lli_hi_tx.cpp  velma_lli_hi_tx.h  velma_lli_high_rx.cpp  velma_lli_high_rx.h  velma_lli_lo_rx.cpp  velma_lli_lo_rx.h  velma_lli_lo_test.cpp  velma_lli_lo_test.h  velma_lli_lo_tx.cpp  velma_lli_lo_tx.h  velma_lli_low_tx.cpp  velma_lli_low_tx.h  velma_lli_monitor.cpp  velma_lli_monitor.h  velma_lli_port_data.h  velma_lli_ports.cpp  velma_lli_ports.h  velma_lli_real_effector_commands.cpp  velma_lli_real_effector_status.cpp  velma_lli_status_ports.cpp  velma_lli_status_ports.h  (+7 more)
